--- a/src/stylesheets/ui.scss
+++ b/src/stylesheets/ui.scss
@@ -153,7 +153,7 @@ div.show-errors {
   }
 }
 
-form.add-day {
+form.add-coffee-form {
   font-family: Verdana, sans-serif;
   width: 70%;
   margin-left: 15%;
@@ -227,7 +227,7 @@ form.add-day {
     margin: auto;
     width: 100%;
     font-size: 2em;
-    background-color: #8a2a2d;
+    background-color: #425e4f;
     font-weight: bold;
     color: $snow-white;
     padding: 5px;
